# LISA-Massive-Black-Hole

./: .gitignore  CMakeLists.txt  ConstSpec.h  Constants.h  Constants_search.h  Declarations.h  Declarations_search.h  Header.h  IMRPhenomD.c  MBHPostProcess.c  PTMCMC.c  Qscan.gnu  README.md  Response.c  SpecAverage.c  SpecFit.c  Utilities.c  Utilities.h  Utils.c  install.sh  mbh.h  search.c  search.sh  segmentSangria.c  source_frame.c  source_truth.c  spec.sh  unique.c
